--- a/index.html
+++ b/index.html
@@ -11,7 +11,24 @@
     <link rel="stylesheet" href="utils.css">
 </head>
 
-<body>
+<body class="overflow-x-hidden">
+    <div class="container mx-auto">
+        <header>
+            <nav class="flex justify-between">
+                <div class="logo font-bold flex items-center text-blue">CKS  fitness</div>
+                <ul class="navbar flex items-center">
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Services</li>
+                    <li>contact Us</li>
+                    <li><button class="btn">join Now</button></li>
+                </ul>
+            </nav>
+            <hr>
+        </header>
+
+
+    </div>
     
 </body>
 </html>
