--- a/index.html
+++ b/index.html
@@ -26,8 +26,33 @@
             </nav>
             <hr>
         </header>
-
-
+        <main class="min-h-screen">
+            <section class="section1">
+                <div class="flex">
+                    <div class="topleft flex flex-col justify-center px-2">
+                        <div class="text-center">
+                            <img src="dumbell.jpg" alt="" class="dumbelling">
+                        </div>
+                        <h1 class="my-1 text-center">The best fitness Gym in the town is here</h1>
+                        <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+                            error corporis fugit dolore adipisci aperiam omnis nisi dolores hic eius in ex id iure, ea
+                            sunt asperiores et voluptatibus dignissimos autem maiores molestias dolor rem delectus
+                            quidem! Inventore.</p>
+                            <!-- Display the countdown timer in an element -->
+                            <p class="deal text-center">The deal ends in <span id="demo"></span></p>
+                            <div class="buttons">
+                                <button class="btn">join Now</button>
+                                <button class="btn">Contact Us</button>
+                            </div>
+                    </div>
+                    <div class="topright flex justify-center">
+                        <img src="gym.jpg" alt="" class="gyming">
+                    </div>
+                </div>
+            </section>
+            <hr>
+            
+        </main>
     </div>
     
 </body>
