--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <hr>
         </header>
         <main class="min-h-screen">
+
+            <!-- section-1 -->
+
             <section class="section1">
                 <div class="flex">
                     <div class="topleft flex flex-col justify-center px-2">
@@ -51,7 +54,113 @@
                 </div>
             </section>
             <hr>
-            
+
+            <!-- section 2 -->
+
+            <section class="section2">
+                <h1 class="text-center my-2">Pricing</h1>
+                <p class="my-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi debitis provident
+                    suscipit temporibus modi voluptatem. Assumenda aspernatur ad nihil quasi expedita eligendi atque?
+                    Dolorum eum deserunt dicta iste beatae commodi, doloribus expedita hic recusandae, tempora illum
+                    consequuntur? Necessitatibus voluptate animi repellendus reiciendis!</p>
+                    <div class="boxes flex justify-center">
+                        <div class="box">
+                            <h2>Free</h2>
+                            <ul>
+                                <li class="highlighted">₹0/month</li>
+                                <li>0 users included</li>
+                                <li>2 GB of storage</li>
+                                <li>Email support</li>
+                                <li><button class="btn">SignUp Now</button></li>
+                            </ul>
+                        </div>
+                        <div class="box">
+                            <h2>Pro</h2>
+                            <ul>
+                                <li class="highlighted">₹150/month</li>
+                                <li>0 Users included</li>
+                                <li>2 GB of storage</li>
+                                <li>Email support</li>
+                                <li>Help center access</li>
+                                <li><button class="btn">SignUp Now</button></li>
+                            </ul>
+                        </div>
+                        <div class="box">
+                            <h2>Enterprise</h2>
+                            <ul>
+                                <li class="highlighted">₹500/month</li>
+                                <li>0 users included</li>
+                                <li>2 GB of storage</li>
+                                <li>Email support</li>
+                                <li>Help center access</li>
+                                <li><button class="btn">SignUP Now</button></li>
+                            </ul>
+                        </div>
+
+
+                    </div>
+            </section>
+            <hr>
+
+            <!-- section 3 -->
+
+            <section class="section3">
+                <h1 class="text-center my-2">Compare Plans</h1>
+                <div class="container plantable">
+                    <table class="table text-center">
+                        <thead>
+                            <tr>
+                                <th></th><th>Free</th>
+                                <th>Pro</th>
+                                <th>Enterprise</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row" class="text-start">Public</th>
+                                <td>Yes</svg></td>
+                                <td>Yes</svg></td>
+                                <td>Yes</svg></td>
+                            </tr>
+                            <tr>
+                                <th scope="row" class="text-start">Private</th>
+                                <td>-</td>
+                                <td>Yes</svg></td>
+                                <td>Yes</svg></td>
+                            </tr>
+                        </tbody>
+
+                        <tbody>
+                            <tr>
+                                <th scope="row" class="text-start">Permission</th>
+                                <td>Yes</svg></td>
+                                <td>Yes</svg></td>
+                                <td>Yes</svg></td>
+                            </tr>
+                            <tr>
+                                <th scope="row" class="text-start">Sharing</th>
+                                <td>-</td>
+                                <td>Yes</svg></td>
+                                <td>Yes</svg></td>
+                            </tr>
+                            <tr>
+                                <th scope="row" class="text-start">Unlimited member</th>
+                                <td>-</td>
+                                <td>Yes</svg></td>
+                                <td>Yes</svg></td>
+                            </tr>
+                            <tr>
+                                <th scope="row" class="text-start">Sharing</th>
+                                <td>-</td>
+                                <td>-</td>
+                                <td>Yes</svg></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+            <hr>
+
         </main>
     </div>
     
